fix(changelog): white-space: pre-wrap for commit messages

--- a/src/changelog/commits.css
+++ b/src/changelog/commits.css
@@ -1,5 +1,6 @@
 .commits dd {
   font-size: smaller;
+  white-space: pre-wrap;
 }
 
 .irrelevant {
